src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>StartTime_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_UAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_UAT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Lifecycle__c</fullName>
        <description>Display the status of the Requirement Lifecycle _ Nokia; should not be visible on Page Layout</description>
        <label>Status Lifecylce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identify Requirement</fullName>
                </value>
                <value>
                    <fullName>Consolidate Estimation and Approval</fullName>
                    <label>Estimation &amp; Approval</label>
                </value>
                <value>
                    <fullName>Design, Build</fullName>
                    <label>Design &amp; Build</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify: New Requirement</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>Identify: New Requirement</label>
                </value>
                <value>
                    <fullName>Identify: Submit for Business Review</fullName>
                    <color>#FF0000</color>
                    <label>Identify: Submit for Business Review</label>
                </value>
                <value>
                    <fullName>Identify: Deferred</fullName>
                    <color>#E27001</color>
                    <label>Identify: Deferred</label>
                </value>
                <value>
                    <fullName>Consolidate: Approve to Estimate</fullName>
                    <color>#FF0000</color>
                    <label>Consolidate: Approve to Estimate</label>
                </value>
                <value>
                    <fullName>Consolidate: Level of Effort Complete</fullName>
                    <color>#FF0000</color>
                    <label>Consolidate: Level of Effort Complete</label>
                </value>
                <value>
                    <fullName>Consolidate: Submit for CCB Review</fullName>
                    <color>#FF0000</color>
                    <label>Consolidate: Submit for CCB Review</label>
                </value>
                <value>
                    <fullName>Approve: Approved to Deploy</fullName>
                    <color>#FF0000</color>
                    <label>Approve: Approved to Deploy</label>
                </value>
                <value>
                    <fullName>Release: Design</fullName>
                    <color>#0B24BE</color>
                    <label>Release: Design</label>
                </value>
                <value>
                    <fullName>Release: Build</fullName>
                    <color>#419249</color>
                    <label>Release: Build</label>
                </value>
                <value>
                    <fullName>Release: Test</fullName>
                    <color>#B6E32E</color>
                    <label>Release: Test</label>
                </value>
                <value>
                    <fullName>Release: SIT</fullName>
                    <color>#641CCF</color>
                    <label>Release: SIT</label>
                </value>
                <value>
                    <fullName>Release: UAT</fullName>
                    <color>#F96FB7</color>
                    <label>Release: UAT</label>
                </value>
                <value>
                    <fullName>Release: Build Production</fullName>
                    <color>#2F5D85</color>
                    <label>Release: Build Production</label>
                </value>
                <value>
                    <fullName>Release: Test Production</fullName>
                    <color>#AFCADF</color>
                    <label>Release: Test Production</label>
                </value>
                <value>
                    <fullName>Close: Deployed</fullName>
                    <color>#8F6429</color>
                    <label>Close: Deployed</label>
                </value>
                <value>
                    <fullName>Close: Rejected</fullName>
                    <color>#EFAE73</color>
                    <label>Close: Rejected</label>
                </value>
                <value>
                    <fullName>Close: Duplicate</fullName>
                    <color>#57F17C</color>
                    <label>Close: Duplicate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopTime_Approve_to_Estimate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approve to Estimate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Approved_Emergency_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approved Emergency Release</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Approved_to_Deploy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approved to Deploy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Build_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Build Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Build__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Build</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Deferred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Deferred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Deployed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Deployed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Design</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Duplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Duplicate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Emergency_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_ Emergency Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_Change_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: Change Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_New_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: New Requirement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_OnHoldWaitingonClient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify_OnHoldWaitingonClient_</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_Submit_for_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: Submit for Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Level_of_Effort_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Level of Effort Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_No_Build_Req__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_No Build Req</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Rejected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_SIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_SIT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Test_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Test Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_UAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_UAT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <description>Systems which gets impacted from the request</description>
        <inlineHelpText>Systems that get impacted due to this requirement.</inlineHelpText>
        <label>Systems Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics</fullName>
                </value>
                <value>
                    <fullName>SingleCMD</fullName>
                </value>
                <value>
                    <fullName>NIMS</fullName>
                </value>
                <value>
                    <fullName>SAP CRM</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>fALU SFDC</fullName>
                </value>
                <value>
                    <fullName>Web Methods</fullName>
                </value>
                <value>
                    <fullName>Pricetool</fullName>
                </value>
                <value>
                    <fullName>STARS</fullName>
                </value>
                <value>
                    <fullName>Surround</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Directory</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Systems Impacted</fullName>
                </value>
                <value>
                    <fullName>Apttus OEP</fullName>
                </value>
                <value>
                    <fullName>Apttus CPQ</fullName>
                </value>
                <value>
                    <fullName>IWA</fullName>
                    <label>Apttus IWA</label>
                </value>
                <value>
                    <fullName>PMD SoR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Shirt_Roll_Up_Value__c</fullName>
        <formula>IF(TotEst__c = 0,
    T_Shirt_Value_High_Level__c ,
    T_Shirt_Value_Detailed__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T-Shirt Roll-Up Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Size_High_Level__c</fullName>
        <inlineHelpText>VS = &lt;5 
S = 6-10 
M = 11-15 
L = 16-20 
XL = 21 - 30 
XXL = 31-40 
XXXL = &gt;40</inlineHelpText>
        <label>T-Shirt Size (High-Level)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Small</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>X-Large</fullName>
                </value>
                <value>
                    <fullName>XX-Large</fullName>
                </value>
                <value>
                    <fullName>XXX-Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Shirt_Size__c</fullName>
        <formula>IF((TotEst__c / 9) = 0, &quot;Not Estimated&quot;, 
 IF((TotEst__c / 9) &lt;= 5, &quot;Very Small&quot;, 
  IF(((TotEst__c / 9) &gt; 5  &amp;&amp; (TotEst__c / 9) &lt;= 10), &quot;Small&quot;, 
   IF(((TotEst__c / 9) &gt; 10  &amp;&amp; (TotEst__c / 9) &lt;= 15), &quot;Medium&quot;, 
    IF(((TotEst__c / 9) &gt; 15  &amp;&amp; (TotEst__c / 9) &lt;= 20), &quot;Large&quot;, 
     IF(((TotEst__c / 9) &gt; 20  &amp;&amp; (TotEst__c / 9) &lt;= 30), &quot;X-Large&quot;, 
      IF(((TotEst__c / 9) &gt; 30  &amp;&amp; (TotEst__c / 9) &lt;= 40), &quot;XX-Large&quot;,
       IF((TotEst__c / 9) &gt; 40, &quot;XXX-Large&quot;,


  &quot;ERROR&quot;))))))))</formula>
        <inlineHelpText>VS = &lt;5 
S = 6-10 
M = 11-15 
L = 16-20 
XL = 21 - 30 
XXL = 31-40 
XXXL = &gt;40</inlineHelpText>
        <label>T-Shirt Size (Detailed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Value_Detailed__c</fullName>
        <formula>IF((TotEst__c / 9) &gt; 40, 80,
 IF((TotEst__c / 9) &gt; 30, 40,
  IF((TotEst__c / 9) &gt; 20, 30,
   IF((TotEst__c / 9) &gt; 15, 20,
    IF((TotEst__c / 9) &gt; 10, 15,
     IF((TotEst__c / 9) &gt; 5, 10, 
      IF((TotEst__c / 9) &gt; 0, 5, 

0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>T-Shirt value based on detailed estimate</inlineHelpText>
        <label>T-Shirt Value (Detailed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Value_High_Level__c</fullName>
        <formula>CASE(T_Shirt_Size_High_Level__c,
 &quot;Very Small&quot;, 5,
 &quot;Small&quot;, 10,
 &quot;Medium&quot;, 15,
 &quot;Large&quot;, 20,  
 &quot;X-Large&quot;, 30, 
 &quot;XX-Large&quot;, 40, 
 &quot;XXX-Large&quot;, 80, 
 null
)</formula>
        <label>T-Shirt Value (High-Level)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Deployment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For tracking planned deployment dates of hypercare requirements</inlineHelpText>
        <label>Target Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>User_Story__r.Team__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <description>Technical description of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describes how the functionality will be enabled technically - identify multiple options with differing levels of customization if applicable.</inlineHelpText>
        <label>Technical Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Test case for the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for testing of the request</description>
        <label>Test Total</label>
        <summarizedField>Application_Inventory__c.Total_Test__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tester_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approve_to_Estimate__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approve_to_Estimate__c) ,
	(Now() - StartTime_Approve_to_Estimate__c)*24*60 ,
	(StopTime_Approve_to_Estimate__c - StartTime_Approve_to_Estimate__c)*24*60)</formula>
        <label>Approve to Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approved_Emergency_Release__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approved_Emergency_Release__c) ,
	(Now() - StartTime_Approved_Emergency_Release__c)*24*60 ,(StopTime_Approved_Emergency_Release__c - StartTime_Approved_Emergency_Release__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Approved Emergency Release</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approved_to_Deploy__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approved_to_Deploy__c) ,
	(Now() - StartTime_Approved_to_Deploy__c)*24*60 ,(StopTime_Approved_to_Deploy__c - StartTime_Approved_to_Deploy__c)*24*60)</formula>
        <label>Approved to Deploy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Build_Production__c</fullName>
        <formula>IF( ISBLANK(StopTime_Build_Production__c) ,
	(Now() - StartTime_Build_Production__c)*24*60 ,(StopTime_Build_Production__c - StartTime_Build_Production__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Build__c</fullName>
        <formula>IF( ISBLANK(StopTime_Build__c) ,
	(Now() - StartTime_Build__c)*24*60 ,(StopTime_Build__c - StartTime_Build__c)*24*60)</formula>
        <label>Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Deferred__c</fullName>
        <formula>IF( ISBLANK(StopTime_Deferred__c) ,
	(Now() - StartTime_Deferred__c)*24*60 ,(StopTime_Deferred__c - StartTime_Deferred__c)*24*60)</formula>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Deployed__c</fullName>
        <formula>IF( ISBLANK(StopTime_Deployed__c) ,
	(Now() - StartTime_Deployed__c)*24*60 ,(StopTime_Deployed__c - StartTime_Deployed__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Design__c</fullName>
        <formula>IF( ISBLANK(StopTime_Design__c) ,
	(Now() - StartTime_Design__c)*24*60 ,(StopTime_Design__c - StartTime_Design__c)*24*60)</formula>
        <label>Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Duplicate__c</fullName>
        <formula>IF( ISBLANK(StopTime_Duplicate__c) ,
	(Now() - StartTime_Duplicate__c)*24*60 ,(StopTime_Duplicate__c - StartTime_Duplicate__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Emergency_Request__c</fullName>
        <formula>IF( ISBLANK(StopTime_Emergency_Request__c) ,
	(Now() - StartTime_Emergency_Request__c)*24*60 ,(StopTime_Emergency_Request__c - StartTime_Emergency_Request__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Emergency Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_Change_Request__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_Change_Request__c) ,
	(Now() - StartTime_Identify_Change_Request__c)*24*60 ,(StopTime_Identify_Change_Request__c - StartTime_Identify_Change_Request__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Identify Change Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_New_Requirement__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_New_Requirement__c) ,
	(Now() - StartTime_Identify_New_Requirement__c)*24*60 , (StopTime_Identify_New_Requirement__c - StartTime_Identify_New_Requirement__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: New Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_OnHoldWaitingonClie__c</fullName>
        <label>TimeSpentOn_Identify_OnHoldWaitingonClie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Level_of_Effort_Complete__c</fullName>
        <formula>IF( ISBLANK(StopTime_Level_of_Effort_Complete__c) ,
	(Now() - StartTime_Level_of_Effort_Complete__c)*24*60 ,(StopTime_Level_of_Effort_Complete__c - StartTime_Level_of_Effort_Complete__c)*24*60)</formula>
        <label>Level of Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_No_Build_Req__c</fullName>
        <formula>IF( ISBLANK(StopTime_No_Build_Req__c) ,
	(Now() - StartTime_No_Build_Req__c)*24*60 ,(StopTime_No_Build_Req__c - StartTime_No_Build_Req__c)*24*60)</formula>
        <label>TimeSpentOn_No Build Req</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Rejected__c</fullName>
        <formula>IF( ISBLANK(StopTime_Rejected__c) ,
	(Now() - StartTime_Rejected__c)*24*60 ,(StopTime_Rejected__c - StartTime_Rejected__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_SIT__c</fullName>
        <formula>IF( ISBLANK(StopTime_SIT__c) ,
	(Now() - StartTime_SIT__c)*24*60 ,(StopTime_SIT__c - StartTime_SIT__c)*24*60)</formula>
        <label>SIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Submit_for_Business_Review__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_Submit_for_Business__c) ,
	(Now() - StartTime_Identify_Submit_for_Business__c)*24*60 ,(StopTime_Identify_Submit_for_Business__c - StartTime_Identify_Submit_for_Business__c)*24*60)</formula>
        <label>Submit for Business Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Test_Production__c</fullName>
        <formula>IF( ISBLANK(StopTime_Test_Production__c) ,
	(Now() - StartTime_Test_Production__c)*24*60 ,(StopTime_Test_Production__c - StartTime_Test_Production__c)*24*60)</formula>
        <label>Test Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Test__c</fullName>
        <formula>IF( ISBLANK(StopTime_Test__c) ,
	(Now() - StartTime_Test__c)*24*60 ,(StopTime_Test__c - StartTime_Test__c)*24*60)</formula>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_UAT__c</fullName>
        <formula>IF( ISBLANK(StopTime_UAT__c) ,
	(Now() - StartTime_UAT__c)*24*60 ,(StopTime_UAT__c - StartTime_UAT__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>( Req__c + Des__c + BUT__c + SIT__c + UAT__c + TrnDep__c + Adapt__c )*
( 1+Cont__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated value.</inlineHelpText>
        <label>Total Estimate (Bottom Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Level_of_Effort__c</fullName>
        <description>Total actual level of effort (in Hours) taken in completing the request (i.e. time taken in plan, design, build, test, UAT, deploy &amp; support)</description>
        <label>Total Actual Level of Effort</label>
        <summarizedField>Actual_Level_of_Effort__c.Total_Actual_Level_of_Effort__c</summarizedField>
        <summaryForeignKey>Actual_Level_of_Effort__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Dev_Estimate__c</fullName>
        <formula>(BUT__c  +  Des__c) / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dev Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Variance__c</fullName>
        <description>Difference in Estimated Level of effort &amp; Actual level of effort</description>
        <formula>Total_Actual_Level_of_Effort__c - TotEst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Effort Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimate_Bottom_Up__c</fullName>
        <description>Total estimated level of effort for build, design &amp; test of the request</description>
        <formula>Build_Total__c + Design_Total__c + Test_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Solution Capacity Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <description>Priority ranking of the request based on Business benefit, Urgency of request, User impact &amp; LOE</description>
        <formula>( Business_Benefit_Value__c  +  Urgency_of_Request_Value__c  +  User_Impact_of_Change_Value__c  +  Level_of_Effort_Value__c  )  / 4</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test_Estimate__c</fullName>
        <formula>SIT__c /9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Test Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Extent__c</fullName>
        <description>Field indicates on the extend of materials needed for this requirement</description>
        <label>Training Extent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Training Module</fullName>
                    <label>Large - Training Module</label>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                    <label>Low - Release Notes</label>
                </value>
                <value>
                    <fullName>Quick Reference Guide</fullName>
                    <label>Medium - Quick Reference Guide</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated for Training and Deploying.</description>
        <inlineHelpText>Number of hours estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Planned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UAT Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated to complete UAT.</description>
        <inlineHelpText>Number of hours estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE( 
Urgency_of_Request__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Request field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Request Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <description>Urgency of request</description>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE( 
User_Impact_of_Change__c , 
&quot;High&quot;,1, 
&quot;Medium&quot;,2, 
&quot;Low&quot;, 3, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <description>User impact from the request</description>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>User Impact of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>